--- a/htmlpractice/styles/styles.css
+++ b/htmlpractice/styles/styles.css
@@ -26,6 +26,16 @@ p {
   padding: 10px;
 }
 
+.main-para{
+  font-size: 1.5em;
+  line-height: 1.5em;
+}
+
+#active {
+  background-color: white;
+  color: steelblue;
+}
+
 footer {
   background-color: steelblue;
   color: white;
