--- a/htmlpractice/styles/styles.css
+++ b/htmlpractice/styles/styles.css
@@ -10,14 +10,21 @@
 }*/
 
 a {
-    color: white;
-    margin: 40px;
-    font-size: 1.5em;
+  color: white;
+  margin: 40px;
+  font-size: 1.5em;
+  padding: 25px;
   }
+
+body {
+  margin: 0;
+
+}
 
 h1 {
   color: steelblue;
   text-align: center;
+  margin: 50px 0;
 }
 
 img {
@@ -48,12 +55,13 @@ nav, footer {
   background-color: steelblue;
   color: white;
   text-align: center;
-  padding: 10px;
+  padding: 25px;
 } 
 
 footer p {
   font-size: 20px;
   margin: 20px auto;
+  padding: 25px;
 }
 
 a:hover{
