--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Raleway:wght@300&display=swap');
+
+
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -5,6 +11,14 @@
 
 body {
     background-color: #f7f6f2;
+    font-family: Raleway, Lato, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
@@ -15,6 +29,7 @@ nav a {
     text-align: center;
     text-decoration: none;
     color: #CD7946;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -42,6 +57,10 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
     background-color: #99B7BD;
@@ -51,6 +70,10 @@ main section {
     background-color: #CD7946;
     text-decoration: none;
     color: #F1E1C6;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -60,11 +83,16 @@ main section {
 
 .home-title {
     color: #72B7C4;
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 footer {
     background-color: #F1E1C6;
     color: #4a2c1a;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -84,16 +112,24 @@ footer p a:hover {
     text-decoration: underline;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
+
 .msg {
-    background-color: #F1E1C6;
+    background-color: #F1E1C6;line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
     color: #CD7946;
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
 }
 
 .msg p {
     color: #4a2c1a;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 h4 {
@@ -102,9 +138,21 @@ h4 {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 .logo {
     width: 80px;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #99B7BD;
+}
