--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -23,6 +23,14 @@ h2 {
 
 header {
     background-color: #F1E1C6;
+    display: grid;
+    grid-template-columns: 150px auto;
+    opacity: 0.9;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -37,12 +45,36 @@ nav a:hover {
     color: white;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 150px;
+}
+
 #hero-msg h1 {
     text-align: center;
+    text-shadow: 2px 2px 2px #f5f2ed;
+    color: #5facba;
+    
 }
 
 #hero-msg h4 {
     text-align: center;
+    text-shadow: 2px 2px 2px #4e6063; 
+    color: #f5f2ed;
+    
 }
 
 #hero-img {
@@ -61,10 +93,7 @@ main section img {
     box-sizing: border-box;
 }
 
-#background {
-    height: 725px;
-    background-color: #99B7BD;
-}
+
 
 .book, .join {
     background-color: #CD7946;
@@ -74,11 +103,18 @@ main section img {
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
+    box-shadow: 2px 2px 5px #6f7364;
+    
 }
 
 .book:hover, .join:hover {
     background-color: #99B7BD;
     color: white;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
 .home-title {
@@ -93,6 +129,9 @@ footer {
     color: #4a2c1a;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -116,21 +155,6 @@ footer .social img {
     padding-top: 15px;
 }
 
-.msg {
-    background-color: #F1E1C6;line-height: 1.5em;
-    padding: 35px;
-}
-
-.msg h2 {
-    color: #CD7946;
-    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
-}
-
-.msg p {
-    color: #4a2c1a;
-    font-size: .8em;
-    padding-bottom: 15px;
-}
 
 h4 {
     color: #99B7BD;
@@ -147,7 +171,11 @@ h4 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
+
+/* main home grid children */
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
@@ -155,4 +183,105 @@ h4 {
 
 .card-img {
     border: 10px solid #99B7BD;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    height: 725px;
+    background-color: #99B7BD;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    background-color: #F1E1C6;line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2 {
+    color: #CD7946;
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+}
+
+.msg p {
+    color: #4a2c1a;
+    font-size: .8em;
+    padding-bottom: 15px;
+   
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+        
