--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -244,7 +244,7 @@ h4 {
 
 #faq_hero {
     max-width: 1000px;
-    padding: 100px;
+    padding: 10px;
     text-align: center;
     margin: auto;
 }
@@ -266,34 +266,67 @@ h4 {
     max-width: 950px;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 70vh;
     margin: auto;
+    padding: 20px;
+    border-radius: 5px;
 
 }
 
+#faq_content input {
+    display: none;
+}
+
+
 .faq_question span {
     font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+    color: #f5f2ed;
+ 
+
 }
 
 .faq_question label {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 20px;
+    background: #CD7946;
+    cursor: pointer;
+    border-radius: 5px;
+    position: relative;
+    z-index: 99;
 }
 
 .plus {
     font-size: 2.5em;
+    color: #f5f2ed;
 }
 
-.faq_content {
-    font-size: .8em;
-    padding: 10px;
+#faq_content .faq_question .faq_content  {
+    max-height: 0px;
+    overflow: hidden;
+    transition: all 0.4s ease;
 }
 
-.faq_content p, ul {
+.faq_question input:checked + label .faq_content{
+    max-height: 100vh;
+}
+
+
+.faq_content p {
     line-height: 1.5em;
+    font-size: .8em;
+    padding: 15px 20px;
     
-}s
+}
+
+.faq_content ul {
+    line-height: 1.5em;
+    font-size: .8em;
+    padding: 60px, 5px, 5px, 5px;
+    margin-left: 30px;
+    
+}
 
 
 
