--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -95,7 +95,7 @@ main section img {
 
 
 
-.book, .join {
+.book, .join, .get-in-touch {
     background-color: #CD7946;
     text-decoration: none;
     color: #F1E1C6;
@@ -107,7 +107,7 @@ main section img {
     
 }
 
-.book:hover, .join:hover {
+.book:hover, .join:hover, .get-in-touch:hover {
     background-color: #99B7BD;
     color: white;
 }
@@ -244,97 +244,184 @@ h4 {
 
 #faq_hero {
     max-width: 1000px;
-    padding: 10px;
+    padding: 50px;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
 }
 
 #faq_hero h1 {
     font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
     font-size: 4em;
+    margin: 0 auto;
+    padding: 15px;
+    color: #CD7946;
 
 }
 
 #faq_hero h2 {
     font-size: 1.5em;
     padding: 5px;
+    margin: 0 auto;
+    color: #4a2c1a;
 }
 
-#faq_content {
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 950px;
+
+
+.accordion {
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
     align-items: center;
-    justify-content: center;
-    min-height: 70vh;
-    margin: auto;
-    padding: 20px;
-    border-radius: 5px;
+    margin: 0 auto;
+}
+
+.light {
+    list-style: none;
+    width: 100%;
+    margin: 12px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #72B7C4;
+    box-shadow: 3px 3px 8px #6f7364;
+    
+}
+
+.dark {
+    list-style: none;
+    width: 100%;
+    margin: 12px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #99B7BD;
+    box-shadow: 3px 3px 8px #6f7364;
+    
+}
+
+.accordion li label {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px 0px 20px;
+    font-size: 1.2em;
+    cursor: pointer;
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+    color: #f5f2ed;
+    justify-content: space-between;
 
 }
 
-#faq_content input {
+label::after {
+    content: '+';
+    margin-right: 10px;
+    margin-left: 10px;
+    font-size: 2.5em;
+    font-family: Raleway, Lato, Helvetica, sans-serif;
+}
+
+input[type="radio"]{
     display: none;
 }
 
-
-.faq_question span {
-    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
-    color: #f5f2ed;
- 
-
-}
-
-.faq_question label {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background: #CD7946;
-    cursor: pointer;
-    border-radius: 5px;
-    position: relative;
-    z-index: 99;
-}
-
-.plus {
-    font-size: 2.5em;
-    color: #f5f2ed;
-}
-
-#faq_content .faq_question .faq_content  {
-    max-height: 0px;
-    overflow: hidden;
-    transition: all 0.4s ease;
-}
-
-.faq_question input:checked + label .faq_content{
-    max-height: 100vh;
-}
-
-
-.faq_content p {
-    line-height: 1.5em;
+.accordion .faq_content{
+    color: #4e6063;
     font-size: .8em;
-    padding: 15px 20px;
+    line-height: 1.2em;
+    padding: 5px 30px 15px 30px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+
+}
+
+.accordion input[type="radio"]:checked + label + .faq_content {
+    max-height: 250vh;
     
 }
 
-.faq_content ul {
-    line-height: 1.5em;
-    font-size: .8em;
-    padding: 60px, 5px, 5px, 5px;
+.accordion input[type="radio"]:checked + label::after{
+   content: '-';
+    
+}
+
+.accordion .faq_content ul {
+    padding-left: 30px;
+    margin-bottom: 10px;
+}
+
+.faq_content li {
+    font-size: .9em;
+    line-height: 1.2em;
+    list-style-type: square;
+    margin-bottom: 5px;
+}
+
+.others {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    margin-top: 100px;
+    margin-bottom: -70px;
+}
+
+#background-2{
+   
+    height: 500px;
+    background-color: #b39989;
+    grid-column: 1/9;
+    grid-row: 1/7;
+
+}
+
+.backpacker {
+    grid-column: 2/5;
+    grid-row: 2/6;
+    z-index: 99;
+    width: 100%;
+    margin-left: -30px;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.additional-faqs {
+    grid-column: 5/8;
+    grid-row: 3/5;
+    z-index: 99;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     margin-left: 30px;
     
+    
 }
 
+.additional-faqs h2 {
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
+    color: #4a2c1a;
+    padding: 20px;
 
+}
+
+.additional-faqs p {
+    font-size: .8em;
+    line-height: 1.5em;
+    padding-bottom: 20px;
+
+}
+   
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    #hero, .home-grid, #faq_hero {
         display: block;
         height: auto;
     }
+
+    .others {
+        display: block;
+        height: auto;
+        margin: 0 auto;
+        margin-bottom: 60px;
+        text-align: center;
+        margin-right: 20px;
+
+    }
+
     nav, footer {
         flex-direction: column;
     }
@@ -359,7 +446,7 @@ h4 {
         margin: 50px auto;
         width: 60%;
     }
-    #background {
+    #background, #background-2 {
         display: none;
     }
     .mountains, .msg {
@@ -367,8 +454,31 @@ h4 {
         display: block;
         margin: 0 auto;
     }
+
+    .backpacker, .faq_content {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .accordion {
+        width: 80%;
+        display: block;
+        margin: 0;
+        justify-items: center;
+        box-sizing: border-box;
+    }
+
+    .faq_content ul {
+        width: 100%;
+        padding-left: 0px;
+    }
+
     footer {
         margin-top: 25px;
     }
+
 }
         
