--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -297,7 +297,7 @@ h4 {
     
 }
 
-.accordion li label {
+.faqs-label{
     display: flex;
     align-items: center;
     padding: 10px 20px 0px 20px;
