--- a/bdaysite/styles/style.css
+++ b/bdaysite/styles/style.css
@@ -21,25 +21,27 @@ header {
     grid-template-rows: 1fr 1fr;
     justify-items: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
 
 }
 
 .logo {
-    width: 30rem;
-    padding: 10px;
+    width: 25rem;
     justify-self: center;
     align-self: center;
     grid-row: 1/2;
-    margin-bottom: 50px;
+    margin-bottom: -30px;
 }
  
 nav {
     display: flex;
-    justify-items: space-evenly;
-    padding-bottom: 50px;
+    justify-items:center;
     grid-row: 2/3;
     gap: 300px;
-    margin-bottom: 100px;
 
 }
 
@@ -60,25 +62,24 @@ nav a:hover {
 #hero {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: -100px;
 }
 
 #hero-box {
     grid-column: 1/3;
     grid-row: 1/2;
     z-index: 1;
+    margin-top: 400px;
 }
 
 #hero-msg {
     grid-column: 1/2;
     grid-row: 1/2;
-    margin-top: 80px;
+    margin-top: 350px;
     margin-left: 100px;
     align-self: center;
     justify-self: center;
     text-align: center;
-    z-index: 99;
-    margin-top: -30px;
+    z-index: 98;
 }
 
 #hero-msg h1 {
@@ -109,8 +110,7 @@ nav a:hover {
 
 .home-grid {
     display: grid;
-    grid-template-columns: repeat (8, 1fr);
-    grid-template-columns: repeat(9, auto);
+    grid-template-columns: repeat(8, 1fr);
 }
 
 .background {
@@ -124,7 +124,7 @@ nav a:hover {
 }
 
 #intro-msg {
-    grid-column: 4/6;
+    grid-column: 3/7;
     z-index: 1;
     grid-row: 2/3;
     justify-content: center;
@@ -164,14 +164,13 @@ nav a:hover {
 
 #intro-party {
     grid-row: 4/7;
-    grid-column: 3/7;
+    grid-column: 1/9;
     padding: 50px;
     margin-top: 100px;
     margin-bottom: 100px;
     justify-items: center;
     display: flex;
     align-items: center;
-    flex-direction: center;
     gap: 150px;
     margin-right: 100px;
     margin-left: 100px;
@@ -199,111 +198,71 @@ nav a:hover {
 #slideshow {
     grid-row: 8/9;
     grid-column: 3/7;
-    z-index: 1;
+    z-index: 90;
+    display: flex;
+    margin-top: -200px;
 }
 
-#slider {
-    margin: 0 auto;
-    width: 800px;
-    max-width: 100%;
-    text-align: center;
- }
- #slider input[type=radio] {
-    display: none;
- }
- #slider label {
-    cursor:pointer;
-    text-decoration: none;
- }
- #slides {
-    padding: 10px;
-    position: relative;
-    z-index: 1;
- }
- #overflow {
-    width: 100%;
+#slide-show {
     overflow: hidden;
- }
- #slide1:checked ~ #slides .inner {
-    margin-left: 0;
- }
- #slide2:checked ~ #slides .inner {
-    margin-left: -100%;
- }
- #slide3:checked ~ #slides .inner {
-    margin-left: -200%;
- }
- #slide4:checked ~ #slides .inner {
-    margin-left: -300%;
- }
- #slide5:checked ~ #slides .inner {
-    margin-left: -400%;
- }
- #slide6:checked ~ #slides .inner {
-    margin-left: -500%;
- }
+    height: 510px;
+    width: 1000px;
+    margin: 0 auto;
+}
 
- .slide-content img {
-    width: 400px;
-    height: 400px;
- }
- 
+.slide {
+    float: left;
+    height: 510px;
+    width: 1000px;
+}
 
- #slides .inner {
-    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-    width: 400%;
-    line-height: 0;
-    height: 300px;
- }
- #slides .slide {
-    width: 25%;
-    float:left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    color: #fff;
- }
+.slide-wrapper {
+    width: calc(1000px * 7);
+    animation: slide 20s ease infinite;
+}
 
- #controls {
-    margin: -180px 0 0 0;
-    width: 100%;
-    height: 50px;
-    z-index: 3;
-    position: relative;
- }
- #controls label {
-    transition: opacity 0.2s ease-out;
-    display: none;
-    width: 50px;
-    height: 50px;
-    opacity: .4;
- }
- #controls label:hover {
-    opacity: 1;
- }
- #slide1:checked ~ #controls label:nth-child(2),
- #slide2:checked ~ #controls label:nth-child(3),
- #slide3:checked ~ #controls label:nth-child(4),
- #slide4:checked ~ #controls label:nth-child(5),
- #slide5:checked ~ #controls label:nth-child(6),
- #slide6:checked ~ #controls label:nth-child(1) {
-    background: url(images/next.png) no-repeat;
-    float:right;
-    margin: 0 -50px 0 0;
-    display: block;
- }
- #slide1:checked ~ #controls label:nth-last-child(2),
- #slide2:checked ~ #controls label:nth-last-child(3),
- #slide3:checked ~ #controls label:nth-last-child(4),
- #slide4:checked ~ #controls label:nth-last-child(5),
- #slide5:checked ~ #controls label:nth-last-child(6),
- #slide6:checked ~ #controls label:nth-last-child(1) {
-    background: url(images/left.png) no-repeat;
-    float:left;
-    margin: 0 0 0 -50px;
-    display: block;
- }
+@keyframes slide {
+    0% {
+      margin-left: 0;
+    }
+  
+    14.2857% {
+      margin-left: calc(-100% * 0);
+    }
+  
+    28.5714% {
+      margin-left: calc(-100% * 1);
+    }
+  
+    42.8571% {
+      margin-left: calc(-100% * 2);
+    }
+  
+    57.1428% {
+      margin-left: calc(-100% * 3);
+    }
+  
+    71.4285% {
+      margin-left: calc(-100% * 4);
+    }
+  
+    85.7142% {
+      margin-left: calc(-100% * 5);
+    }
+  
+    
+    99.9999% {
+      margin-left: calc(-100% * 6);
+    }
+
+    100% {
+      margin-left: 0;
+    }
+
+  }
+  
+  
+
 
 footer {
     display: grid;
@@ -393,11 +352,113 @@ footer .social img {
         display: block;
         padding: 15px;
     }
-
-
+    
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+        text-align: center;
+        justify-items: center;
+        margin: 0 auto;
+    
+    }
+    
+    #hero-msg {
+       margin-left: -10px;
+       font-size: small;
+       margin-top: -180px;
+    }
+    
+    #hero-msg a, script {
+        margin-top: 50px;
+    }
+    
+    .background, .background-2 {
+        display: none;
+    }
+    
+    #intro-msg, #intro-party, #slideshow {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding: 25px;
+    }
+    
+    #intro-party {
+        display: block;
+    }
+    
+    .thumbs-up {
+        width: 250px;
+        margin-top: 50px;
+        margin-bottom: -30px;
+    }
+    
     footer {
-        margin-top: 25px;
+        margin-top: 205px;
+        display: flex;
     }
 
-}
+    #copyright {
+        text-align: center;
+        margin-left: -10px;
+        margin-top: -80px;
+    }
+
+    #plan-link {
+        margin-top: 10px;
+        margin-left: -30px;
+    }
+
+    #contact-link {
+        margin-top: -40px;
+        margin-left: -100px;
+    }
+
+    .social {
+        margin-top: 50px;
+        display: flex;
+        justify-content:space-between;
+        align-items: center;
+        margin-left: -25px;
+    }
+
+    #copyright, #plan-link, #contact-link {
+        font-size: smaller;
+    }
+    
+    header {
+        position: relative;
+        margin: 0 auto;
+        padding: 0;
+        margin-bottom: -300px;
+    }
+    
+    .fact-img {
+        width: 400px;
+    }
+    
+    #slide-show {
+        overflow: hidden;
+        height: 510px;
+        width: calc(900px * 7);
+        margin: 10px;
+        justify-items: center;
+
+    }
+    
+    .slide-wrapper {
+        width: calc(900px * 7);
+        animation: slide 20s ease infinite; 
+        overflow: hidden;
+
+    }
+    
+    .slide-wrapper > div {
+        width: 900px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+
+    }
         
