--- a/bdaysite/styles/style.css
+++ b/bdaysite/styles/style.css
@@ -132,7 +132,7 @@ nav a:hover {
     text-align: center;
 }
 
-#intro-msg h2, #party-msg h2 {
+#intro-msg h2, #party-msg h2, #venue-msg h2, #theme-msg h2, #gifts h2 {
     font-family:"Nanum Pen Script", Cookie, cursive;
     font-size: 3em;
     color: #ECA150;
@@ -140,7 +140,7 @@ nav a:hover {
     margin-top: -30px;
 }
 
-#intro-msg h4, #party-msg h4 {
+#intro-msg h4, #party-msg h4, #venue-msg h4, #theme-msg h4, #gifts h4 {
     font-size: 1em;
     color: #88AAB6;
     padding-bottom: 30px;
@@ -217,51 +217,246 @@ nav a:hover {
 }
 
 .slide-wrapper {
-    width: calc(1000px * 7);
-    animation: slide 20s ease infinite;
-}
-
-@keyframes slide {
+    width: calc(1000px * 12);
+    animation: slide 60s infinite;
+  }
+  
+  @keyframes slide {
     0% {
       margin-left: 0;
     }
   
-    14.2857% {
+    8.33% {
       margin-left: calc(-100% * 0);
     }
   
-    28.5714% {
+    16.67% {
       margin-left: calc(-100% * 1);
     }
   
-    42.8571% {
+    25% {
       margin-left: calc(-100% * 2);
     }
   
-    57.1428% {
+    33.33% {
       margin-left: calc(-100% * 3);
     }
   
-    71.4285% {
+    41.67% {
       margin-left: calc(-100% * 4);
     }
   
-    85.7142% {
+    50% {
       margin-left: calc(-100% * 5);
     }
   
-    
-    99.9999% {
-      margin-left: calc(-100% * 6);
+    58.33% {
+      margin-left: calc(-100% * 5);
     }
-
+  
+    66.67% {
+      margin-left: calc(-100% * 4);
+    }
+  
+    75% {
+      margin-left: calc(-100% * 3);
+    }
+  
+    83.33% {
+      margin-left: calc(-100% * 2);
+    }
+  
+    91.67% {
+      margin-left: calc(-100% * 1);
+    }
+  
     100% {
       margin-left: 0;
     }
-
   }
   
   
+
+  
+.party-grid {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+#venue {
+    grid-column: 1/9;
+    z-index: 1;
+    grid-row: 1/4;
+    padding: 50px;
+    margin-top: 300px;
+    margin-bottom: 100px;
+    justify-items: center;
+    display: flex;
+    align-items: center;
+    gap: 150px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+#venue-msg {
+    width: 90%;
+    text-align: center;
+}
+
+.map {
+    width: 100%;
+}
+
+#theme-and-treats {
+    grid-column: 1/9;
+    z-index: 1;
+    grid-row: 4/7;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 50px;
+    justify-items: center;
+    display: flex;
+    align-items: center;
+    margin-top: -150px;
+    gap: 150px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+#mini-slideshow {
+    max-width: 900px;
+    position: relative;
+    
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+    position: relative;
+}
+
+#mini-slideshow img {
+    width: 100%;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    color: #AEC542;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    transform: translateY(-50%);
+}
+
+.prev {
+   left: 0
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+   
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: #747978;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #82AB61;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+    left: 5%;
+    transform: translateX(-50%);
+}
+
+/* The dots/bullets/indicators */
+.dot-container {
+    position: absolute;
+    bottom: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 100%;
+}
+
+.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#theme-msg {
+    width: 60%;
+    text-align: center;
+}
+
+.background3 {
+    height: 725px;
+    background-color: #eef9e7;
+    grid-column: 1/9;
+    grid-row: 4/7;
+    z-index: -1;
+    margin-top: -100px;
+
+}
+
+#gifts {
+    grid-column: 2/8;
+    z-index: 1;
+    grid-row: 8/9;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 150px;
+    margin-bottom: 380px;
+}
+
+#gifts img {
+    padding-top: 60px;
+    width: 50%;
+}
+
 
 
 footer {
