--- a/bdaysite/styles/style.css
+++ b/bdaysite/styles/style.css
@@ -59,17 +59,44 @@ nav a:hover {
     color: white;
 }
 
-#hero {
+#hero, #rsvp-hero {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-#hero-box {
+#rsvp-hero:hover #rsvp-img {
+    opacity: 70%;
+}
+
+#rsvp-hero:hover #rsvp-msg h1 {
+    color: #AEC542;
+    animation: bounce 0.6s infinite;
+}
+
+@keyframes bounce {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+#hero-box, #rsvp-box {
     grid-column: 1/3;
     grid-row: 1/2;
     z-index: 1;
     margin-top: 400px;
 }
+
+#rsvp-box {
+    position: relative;
+    
+}
+
 
 #hero-msg {
     grid-column: 1/2;
@@ -82,12 +109,32 @@ nav a:hover {
     z-index: 98;
 }
 
+#rsvp-msg {
+    position: absolute;
+    top: 105%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 98;
+    margin: auto;
+}
+
 #hero-msg h1 {
     font-family: "Nanum Pen Script", Cookie, cursive;
     font-size: 3em;
     margin-bottom: -10px;
     color: #AEC542;
 }
+
+#rsvp-msg h1 {
+    font-family: "Nanum Pen Script", Cookie, cursive;
+    font-size: 8em;
+    color: #82AB61;
+    text-align: center;
+    margin: 0;
+
+}
+
 
 #hero-msg h3 {
     margin-bottom: -1px;
@@ -103,10 +150,11 @@ nav a:hover {
     color: #88AAB6;
 }
 
-#hero-img {
+#hero-img, #rsvp-img {
     width: 100%;
     z-index: 1;
 }
+
 
 .home-grid {
     display: grid;
@@ -140,7 +188,7 @@ nav a:hover {
     margin-top: -30px;
 }
 
-#intro-msg h4, #party-msg h4, #venue-msg h4, #theme-msg h4, #gifts h4 {
+#intro-msg h4, #party-msg h4, #venue-msg h4, #theme-msg h4, #gifts h4, #contact-msg p {
     font-size: 1em;
     color: #88AAB6;
     padding-bottom: 30px;
@@ -219,6 +267,10 @@ nav a:hover {
 .slide-wrapper {
     width: calc(1000px * 12);
     animation: slide 60s infinite;
+  }
+
+  .slide-wrapper:hover {
+    animation-play-state: paused;
   }
   
   @keyframes slide {
@@ -455,6 +507,117 @@ nav a:hover {
 #gifts img {
     padding-top: 60px;
     width: 50%;
+}
+
+.contact-grid {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    padding: 30px;
+    margin-bottom: 350px;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#contact-msg {
+    grid-column: 3/8;
+    grid-row: 2/4;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    text-align: center;
+
+}
+
+#pterodactyl {
+    grid-column: 3/4;
+    grid-row: 5/8;
+    margin-left: 80px;
+    margin-right: 80px;
+    justify-self: center;
+    color: #88AAB6;
+}
+
+#email {
+    grid-column: 5/6;
+    grid-row: 5/8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 80px;
+    margin-right: 80px;
+    color: #ECA150;
+}
+
+
+#sms {
+    grid-column: 7/8;
+    grid-row: 5/8;
+    margin-left: 80px;
+    margin-right: 80px;
+    justify-self: center;
+    color:#82AB61
+}
+
+#pterodactyl h4, #email h4, #sms h4 {
+    text-align: center;
+    font-size: 0.8em;
+}
+
+.contact-grid a {
+    text-decoration: none;
+}
+
+
+#email a {
+    color: #ECA150;
+}
+
+#email a:hover {
+    text-decoration: underline;
+    color: #AEC542;
+}
+
+#sms a {
+    color: #82AB61;
+}
+
+#sms a:hover {
+    text-decoration: underline;
+    color: #AEC542;
+}
+
+.contact-img {
+    width: 120px;
+    margin: 0 auto;
+
+    
+}
+
+.contact-img:hover {
+    animation: bounce 0.9s;
+}
+
+.or1 {
+    grid-column: 4/5;
+    grid-row: 6/7;
+    justify-self: center;
+
+}
+
+.or2 {
+    grid-column: 6/7;
+    grid-row: 6/7;
+    justify-self: center;
+}
+
+.or1, .or2 {
+    font-family:"Nanum Pen Script", Cookie, cursive;
+    font-size: 2.5em;
+    color: #AEC542;
+    padding: 10px;
 }
 
 
